# surf_bucket_select

./: .env.dist  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
config/: nginx.conf
data/: multi_lines.json
examples/: read_csv_file.rs  read_json_file.rs
src/: lib.rs
src/model/: event_stream.rs  mod.rs  select_object_content.rs
