[package]
name = "bucket-select"
version = "0.0.1"
authors = ["Jean-Marc Fiaschi"]
edition = "2018"
description = "Use SQL with bucket"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jmfiaschi/s3-select"

[dependencies]
slog = { version="2.7.0", features = ["max_level_trace", "release_max_level_info"] }
slog-scope = "4.4.0"
slog-term = "2.8.0"
slog-async = "2.6.0"
slog-stdlog = "4.1.0"
slog-envlogger = "2.2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
jxon = "0.7"
rusoto_core = { version = "0.47.0"}
surf = { version = "2.2.0", default-features = false, features = ["h1-client"] }
bytes = "1.0"
async-trait = "0.1"
async-std = {version = "1", features = ["attributes"]}
xml-rs = "0.8"
crc32fast = "1.2.1"
quick-xml = { version = "0.22.0", features = ["serialize"] }
http = "0.2.4"
futures = "0.3.15"

[dev-dependencies]
criterion = "0.3.4"
chrono = "0.4.19"
futures = "0.3.15"
crc32fast = "1.2.1"

# [[bench]]
# name = "reader_benchmark"
# harness = false
