[package]
name = "surf_bucket_select"
version = "0.1.0"
authors = ["Jean-Marc Fiaschi <jm.fiaschi@gmail.com>"]
edition = "2018"
description = "Read documents stored in a bucket with surf client without dowload the full document in memory."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jmfiaschi/surf-bucket-select"
keywords = ["bucket", "s3", "select", "surf"]
include = ["src/*", "LICENCE-APACHE", "LICENCE-MIT", "README.md"]

[dependencies]
log = { version="0.4.14" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusoto_core = { version = "0.47.0" }
rusoto_s3 = { version = "0.47.0" }
surf = { version = "2.2.0", default-features = false, features = ["h1-client"] }
async-trait = "0.1"
async-std = {version = "1", features = ["attributes"]}
xml-rs = "0.8"
crc32fast = "1.2.1"
http = "0.2.4"
futures = "0.3.15"
